# RMUA2021-JLU

./: EE599_hw3.ipynb
RMUA2021/buff_infomation/: CMakeLists.txt  package.xml
RMUA2021/buff_infomation/include/: buff_infomation.h
RMUA2021/buff_infomation/src/: bulletsupply.cpp  chassisctr.cpp  chassisctr.h  disablemovement.cpp  disableshooting.cpp  gimbalctr.cpp  gimbalctr.h  hprecovery.cpp  set_initialpose.cpp
RMUA2021/com/: CMakeLists.txt  package.xml  readme
RMUA2021/com/src/: obj1.cpp  obj2.cpp  obj2new.cpp  obj3.cpp  obj4.cpp  zcx2.h  zcx3.h
RMUA2021/com/srv/: pathn.srv
RMUA2021/cv/: CMakeLists.txt  package.xml
RMUA2021/cv/src/JLURoboVision/: 2w22.txt  JLURoboVision.pro  JLURoboVision.pro.user.9b9146b.21  JLURoboVision.pro.user.fe3a3e3.4.8-pre1  JLURoboVision.sln  _____.cpp
RMUA2021/handsfree_ros_imu/: CMakeLists.txt
RMUA2021/handsfree_ros_imu/scripts/: hfi_b6_ros.py
RMUA2021/robort_detection/: .detector.py.swo  .detector.py.swp  CMakeLists.txt  data_recorder.py  detector.py  package.xml  predict.py  test.py  test_tf.py  traditional.py
RMUA2021/robort_detection/JLURoboVision/: CMakeLists.txt  CMakeLists.txt.user.aae8c4c  JLURoboVision.pro.user.e07729f.4.8-pre1  README.md
RMUA2021/robort_detection/JLURoboVision/JLURoboVision/: CMakeCache.txt  Makefile  cmake_install.cmake
RMUA2021/robort_detection/JLURoboVision/JLURoboVision/AngleSolver/: AngleSolver.cpp
RMUA2021/robort_detection/JLURoboVision/JLURoboVision/Armor/: Armor.h  ArmorDetector.cpp  ArmorNumClassifier.cpp  findLights.cpp
RMUA2021/robort_detection/JLURoboVision/JLURoboVision/General/: General.h  camera_params.xml  svm1-6.xml
RMUA2021/robort_detection/JLURoboVision/JLURoboVision/Main/: ArmorDetecting.cpp  ImageUpdating.cpp
RMUA2021/robort_detection/JLURoboVision/JLURoboVision/Serial/: SerialReceive.cpp  SerialSend.cpp  predict.cpp
RMUA2021/robort_detection/JLURoboVision/JLURoboVision/Wind/: WindDetector.cpp
RMUA2021/robort_detection/src/: JLURoboVision.pro.user.4587801  QT_____.md
RMUA2021/robort_detection/src/JLURoboVision/AngleSolver/: AngleSolver.h  filter.h
RMUA2021/robort_detection/src/JLURoboVision/Armor/: ShootState.cpp  matchArmors.cpp
RMUA2021/robort_detection/src/JLURoboVision/GxCamera/: GxCamera.h
RMUA2021/robort_detection/src/JLURoboVision/Main/: SerialThread.cpp  filter.cpp  main.cpp
RMUA2021/robort_detection/src/JLURoboVision/Serial/: predict.h
RMUA2021/roborts_base/: CMakeLists.txt
RMUA2021/roborts_base/include/: chassis.h  gimbal.h  ros_dep.h
RMUA2021/roborts_base/roborts_sdk/src/: execution.cpp
RMUA2021/roborts_base/src/: chassis.cpp  gimbal.cpp  referee_system.cpp
RMUA2021/roborts_bringup/launch/: .roborts.launch.swo  .roborts.launch.swp  mapping_stage.launch  roborts.launch  roborts_stage.launch
RMUA2021/roborts_bringup/maps/: saomiao0.pgm  saomiao0.yaml  saomiao1.pgm  saomiao1.yaml  truemap.pgm  truemap.yaml  truemap0.pgm  truemap0.yaml
RMUA2021/roborts_bringup/rviz/: roborts.rviz
RMUA2021/roborts_bringup/worlds/: icra2021.world  saomiao.world  saomiao1.world
RMUA2021/roborts_costmap/: CMakeLists.txt
RMUA2021/roborts_costmap/config/: costmap_parameter_config_for_decision.prototxt  costmap_parameter_config_for_global_plan.prototxt  costmap_parameter_config_for_local_plan.prototxt  debuff_layer_config.prototxt  debuff_layer_config1.prototxt  debuff_layer_config2.prototxt  debuff_layer_config3.prototxt  dynamic_obstacle_layer_config.prototxt  inflation_layer_config_for_debuff.prototxt
RMUA2021/roborts_costmap/include/costmap/: costmap_2d.h  costmap_interface.h  debuff_layer.h  debuff_layer1.h  debuff_layer2.h  debuff_layer3.h  inflation_layer.h
RMUA2021/roborts_costmap/proto/: costmap_parameter_setting.proto
RMUA2021/roborts_costmap/src/: costmap_interface.cpp  debuff_layer.cpp  debuff_layer1.cpp  debuff_layer2.cpp  debuff_layer3.cpp  observation_buffer.cpp
RMUA2021/roborts_decision/: CMakeLists.txt  DecisionNode.md  FactoryDoc.md  GimbalSwingClient.cpp  GimbalSwingServer.cpp  aaa.cpp  along_attack.cpp  behavior_test.cpp  comone.cpp  comtwo.cpp  decision_node.cpp  goaltopic.cpp  icra_decision_node.cpp  loadparam_test.cpp  newstop.cpp  package.xml  readme.md  robotangel.cpp  sentry.cpp  stop.cpp  test.cpp  tongxin_test.cpp  vd.cpp  zcx_node.cpp
RMUA2021/roborts_decision/action_node/: BackBootArea.h  ChaseAction.h  ChassisLimited.h  DefendAction.h  Escape.h  Follow.h  FrozenAction.h  GainBlood.h  GainBullets.h  GimbalLimited.h  GoGoal.h  GoStaticPose.h  SearchAction.h  ShootAction.h  SwingDefend.h  TurnDefend.h  document.md  readme.md
RMUA2021/roborts_decision/blackboard/: .blackboard.h.swp  blackboard.h  document.md
RMUA2021/roborts_decision/config/: decision.prototxt
RMUA2021/roborts_decision/executor/: chassis_executor.cpp  exexutorAPI
RMUA2021/roborts_decision/include/: gimbal.h  goal_factory.h
RMUA2021/roborts_decision/interact/: correspond.h  mutualboard.h  readme.md
RMUA2021/roborts_detection/: detector.py  test.py
RMUA2021/roborts_localization/: CMakeLists.txt  localization_config.h  localization_node.cpp  localization_node.h
RMUA2021/roborts_localization/amcl/: amcl.cpp  amcl.h  amcl_config.h
RMUA2021/roborts_localization/amcl/config/: amcl.yaml
RMUA2021/roborts_localization/config/: localization.yaml
RMUA2021/roborts_msgs/: CMakeLists.txt  package.xml
RMUA2021/roborts_msgs/action/: ChassisCtr.action  ChassisDefend.action  GimbalCtr.action  GimbalSwing.action
RMUA2021/roborts_msgs/msg/: GoGoal.msg  RobotAngle.msg  RobotAngleTest.msg  YawData.msg  interact.msg  kalman.msg  sg.msg
RMUA2021/roborts_msgs/srv/: SetMaxVel.srv  ShootSpeed.srv
RMUA2021/roborts_msgs/srv/gimbal/: FricWhl.srv  ShootCmd.srv
RMUA2021/roborts_planning/global_planner/config/: global_planner_config.prototxt
RMUA2021/sg/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
RMUA2021/sg/src/: .sg3.cpp.swo  .sg3.cpp.swp  sg1.cpp  sg2.cpp  sg3.cpp
RMUA2021/zcx/: CMakeLists.txt  package.xml
RMUA2021/zcx/msg/: path.msg
RMUA2021/zcx/src/: send.cpp  socket.cpp  zcx.cpp  zcx.h
(+24 files in other folders)
