<package format = "2">
    <name>roborts_msgs</name>
    <version>2.0.0</version>
    <description>
        The roborts_msgs package provides all the messages for RoboMaster AI Robot driver
    </description>
    <author>RoboMaster</author>
    <maintainer email="robomaster@dji.com">RoboMaster</maintainer>
    <license>GPL 3.0</license>
    <url type="repository">https://github.com/RoboMaster/RoboRTS-Base</url>
    <url type="bugtracker">https://github.com/RoboMaster/RoboRTS-Base/issues</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>actionlib</build_depend>
<build_depend>actionlib_msgs</build_depend>

    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>

    <build_depend>sensor_msgs</build_depend>
<build_depend>message_generation</build_depend>
<exec_depend>actionlib</exec_depend>
<exec_depend>actionlib_msgs</exec_depend>

<exec_depend>sensor_msgs</exec_depend>

    <exec_depend>message_runtime</exec_depend>

    <export>
    </export>

</package>
